# WEB-HW9

./: README.md  pyproject.toml
BeatifulSoup/: authors.json  parser.py  quotes.json  upload.py
Scrapy/: authors.json  main.py  models.py  parser.py
